tests/ui/rfcs/rfc-0000-never_patterns/never-pattern-is-a-read.stderr
error[E0133]: access to union field is unsafe and requires unsafe function or block
  --> $DIR/never-pattern-is-a-read.rs:10:16
   |
LL |     let U { a: ! } = u;
   |                ^ access to union field
   |
   = note: the field may not be properly initialized: using uninitialized data will cause undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
